--- a/.github/workflows/build-ksu.yml
+++ b/.github/workflows/build-ksu.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout kernel source
       uses: actions/checkout@v3
       with:
-        repository: https://github.com/OnePlusOSS/android_kernel_oneplus_sm8350
+        repository: OnePlusOSS/android_kernel_oneplus_sm8350
         ref: oneplus/sm8350_t_13.0.0_op9rt
         path: sm8350
         fetch-depth: 100
